# PANpipelines

./: .gitignore  LICENSE  README.md  getTemplateFlow.py  pan_processing.py  pyproject.toml  run_pan.sh  run_pan_example.sh  single_subject.py
.github/workflows/: python-package.yml
PAN2025_Deployment/atlas/schaeffer/: prepare_schaeffer1000_7.ipynb
PAN250_Deployment/: README.md  run_pan250.sh
PAN250_Deployment/20240530/: 001_run_pan250_aslproc.sh  002_run_pan250_aslmeasures.sh  PAN250_ManualQC_notes.csv  run_pan250.dockerbind.sh  run_pan250.singbind.sh
PAN250_Deployment/20240530/config/: pan250.config  pan250.config.dockerbind  pan250.config.singbind  pan250_eddyparams_cuda.json  slspec.txt
PAN250_Deployment/20240530/result/: final-group_arterial-stats-qc-measures_outer.csv  (+1 more)
PAN250_Deployment/batch_scripts/: group_template.pbs  participant_template.pbs
PAN250_Deployment/config/: pan250.config  pan250_eddyparams.json
april2025_PAN_Deployment/: README.md  runpan.sh
april2025_PAN_Deployment/batch_scripts/: group_template.pbs  participant_template.pbs
april2025_PAN_Deployment/config/: freesurfer_outputs_april.csv  gm_model.json  hml_ids_list_241231.csv  pan.config.april2025  pan.config.april2025_backup  sessions.tsv  style.css
april2025_PAN_Deployment/containers/: build_all.sh
batch_scripts/: group_template.pbs  participant_template.pbs
batch_scripts/headers/: slurm_cpu.pbs  slurm_cpu_highpri.pbs  slurm_cpu_highpri_fmriprep.pbs
config/: panpipeconfig_example.config
config/credentials/: credentials_example.json
deployment/: README.md  run_pan_slurm.sh
deployment/batch_scripts/: group_template.pbs  participant_template.pbs
deployment/config/: eddy_params.json  panpipeconfig.config  panpipeconfig_slurm.config
example/config/: panpipeconfig_example.config
external_scripts/amico/: amico_noddi.py
external_scripts/combat/: combat_basil.py
external_scripts/enable_aslmetrics/: createTable.m  enable_aslmetrics.m  enable_aslmetrics.sh  glob.m  pantransformed_enable_aslmetrics.sh  validmean.m  validmedian.m  validvariance.m
external_scripts/wm_measures/: wm_measures_lstai.sh
october2025_PAN_Deployment/: README.md  runpan_october.sh
october2025_PAN_Deployment/config/: PAN_dataset_description.json  anatomical.py  anatomical_interface.py  april_october_combo.csv  pan.config.oct2025  sessions.tsv
october2025_PAN_Deployment/containers/: build_all.sh
panprocessing/: Factory.py  __init__.py
panprocessing/nodes/: __init__.py  antstransform.py  aslprep.py  basil.py  collate_csv_single.py  dummy.py  fmriprep.py  freesurfer.py  fslanat.py  glm_randomize_group.py  noddi.py  parse_textdata.py  qsiprep.py  roi_mean_group.py  roi_mean_single.py  tensor.py
panprocessing/pipelines/: __init__.py  aslprep_panpipeline.py  basil_panpipeline.py  dummy_panpipeline.py  fmriprep_panpipeline.py  freesurfer_panpipeline.py  noddi_panpipeline.py  panpipeline.py  qsiprep_panpipeline.py  tensor_panpipeline.py
panprocessing/scripts/: __init__.py  aslprep_panscript.py  fmriprep_panscript.py  panscript.py
panprocessing/utils/: transformer.py  util_functions.py
panprocessing/workflows/: __init__.py  aslprep_workflow.py  basil_workflow.py  dummy_workflow.py  fmriprep_workflow.py  freesurfer_workflow.py  noddi_workflow.py  qsiprep_workflow.py  tensor_workflow.py
src/panpipelines/: Factory.py  __init__.py  group_subjects.py  pan_processing.py  single_subject.py  version.py
tests/: test_PANFactory.py
(+206 files in other folders)
