[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
version.raw-options.local_scheme = "no-local-version"
build.hooks.vcs.version-file = "src/panpipelines/version.py"

[project]
name = "panpipelines"
dynamic = ["version"]
authors = [
  { name="Chidi Ugonna", email="chidiugonna@arizona.edu" },
]
description = "MRI Processing Pipelines for PAN Healthy Minds for Life Study"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "nipype>=1.8.6",
  "numpy>=1.24.4",
  "nibabel>=5.1.0",
  "nilearn>=0.10.2",
  "pandas>=2.0.3",
  "xnat>=0.5.2",
  "pydicom>=2.4.3",
  "templateflow>=23.1.0",
  "nitransforms>=23.0.1",
  "pybids>=0.16.3"
]

[project.urls]
"Homepage" = "https://github.com/MRIresearch/PANpipelines"
"Bug Tracker" = "https://github.com/MRIresearch/PANpipelines/issues"