[build-system]
requires = ["hatchling","hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch]
version.source = "vcs"
version.raw-options.local_scheme = "no-local-version"
build.hooks.vcs.version-file = "src/panpipelines/version.py"

[project]
name = "panpipelines"
dynamic = ["version"]
authors = [
  { name="Chidi Ugonna", email="chidiugonna@arizona.edu" },
]
description = "MRI Processing Pipelines for PAN Healthy Minds for Life Study"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
  "nipype==1.8.6",
  "numpy==1.26.3",
  "nibabel==5.2.0",
  "nilearn==0.10.2",
  "pandas==2.1.4",
  "xnat==0.5.3",
  "pydicom==2.4.4",
  "templateflow==23.1.0",
  "nitransforms==23.0.1",
  "pybids==0.16.4",
  "scipy==1.11.4",
  "sdcflows==2.8.0",
  "mne[hdf]==1.1.0",
  "beautifulsoup4==4.12.3",
  "dominate==2.9.1",
  "pysftp==0.2.9",
  "sqlalchemy==2.0.34",
  "psycopg2-binary==2.9.10",
  "dipy==1.10.0"

]

[project.urls]
"Homepage" = "https://github.com/MRIresearch/PANpipelines"
"Bug Tracker" = "https://github.com/MRIresearch/PANpipelines/issues"